--- a/RMP/UI/MetraNet/Account/App_LocalResources/AccountLandingPage.aspx.es-MX.resx
+++ b/RMP/UI/MetraNet/Account/App_LocalResources/AccountLandingPage.aspx.es-MX.resx
@@ -134,10 +134,10 @@
   </data>
   <data name="billingActivityPanel.Text" xml:space="preserve">
     <value>[es-MX] Billing Activity</value>
-  </data>  
+  </data>
   <data name="billingSummaryPanel.Text" xml:space="preserve">
     <value>[es-MX] Invoices and Payments</value>
-  </data>     
+  </data>
   <data name="NO_INVOICES_TEXT" xml:space="preserve">
     <value>[es-MX] This account does not currently have any invoices or payments.</value>
   </data>
@@ -146,7 +146,7 @@
   </data>
   <data name="SUBSCRIPTION_GRID_TITLE_TEXT" xml:space="preserve">
     <value>[es-MX] Subscriptions</value>
-  </data>   
+  </data>
   <data name="SUBSCRIPTION_END_HEADER_TEXT" xml:space="preserve">
     <value>[es-MX] End</value>
   </data>
@@ -157,36 +157,36 @@
     <value>[es-MX] Start</value>
   </data>
   <data name="SUBSCRIPTION_TYPE_HEADER_TEXT" xml:space="preserve">
-    <value>[es-MX]</value>
-  </data>  
+    <value>[es-MX]Type</value>
+  </data>
   <data name="SUBSCRIPTION_ADD_BUTTON_TEXT" xml:space="preserve">
     <value>[es-MX] Add Subscription</value>
   </data>
   <data name="SUBSCRIPTION_ADD_BUTTON_TOOLTIP_TEXT" xml:space="preserve">
     <value>[es-MX] Create a new subscription to a Product Offering</value>
-  </data>    
+  </data>
   <data name="SUBSCRIPTION_JOIN_BUTTON_TEXT" xml:space="preserve">
     <value>[es-MX] Join Group Subscription</value>
-  </data>  
+  </data>
   <data name="SUBSCRIPTION_JOIN_BUTTON_TOOLTIP_TEXT" xml:space="preserve">
     <value>[es-MX] Add this account as a member of an existing Group Subscription</value>
-  </data>      
+  </data>
   <data name="SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
     <value>[es-MX] Subscription</value>
-  </data>      
+  </data>
   <data name="GROUP_SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
     <value>[es-MX] Group Subscription</value>
-  </data>           
+  </data>
   <data name="INVOICE_ITEM_TEXT" xml:space="preserve">
     <value>[es-MX] Invoice</value>
-  </data>      
+  </data>
   <data name="PAYMENT_ITEM_TEXT" xml:space="preserve">
     <value>[es-MX] Payment</value>
-  </data>            
+  </data>
   <data name="NO_DECISIONS_TEXT" xml:space="preserve">
     <value>[es-MX] No Transactions Found for the Current Interval</value>
-  </data>   
+  </data>
   <data name="lblNowCast.Text" xml:space="preserve">
     <value>[es-MX] NowCast</value>
-  </data>  
+  </data>
 </root>
