--- a/RMP/UI/MetraNet/App_GlobalResources/JSConsts.ja.resx
+++ b/RMP/UI/MetraNet/App_GlobalResources/JSConsts.ja.resx
@@ -121,19 +121,22 @@
     <value>Y/m/d</value>
   </data>
   <data name="DATE_FORMAT" xml:space="preserve">
-    <value> Y/n/j</value>
+    <value>Y/n/j</value>
   </data>
   <data name="DATE_TIME_FORMAT" xml:space="preserve">
-    <value>Y/n/j g:i:s|Y/n/j</value>
+    <value>Y/n/j G:i:s|Y/n/j</value>
   </data>
   <data name="DATE_TIME_FORMAT_DEF" xml:space="preserve">
-    <value>n/j/Y g:i:s A</value>
+    <value>n/j/Y G:i:s A</value>
   </data>
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
-    <value>Y/n/j g:i:s</value>
+    <value>Y/n/j G:i:s</value>
   </data>
   <data name="DECIMAL_SEPARATOR" xml:space="preserve">
     <value>.</value>
+  </data>
+  <data name="DIGIT_SEPARATOR" xml:space="preserve">
+    <value>,</value>
   </data>
   <data name="DUPLICATE" xml:space="preserve">
     <value>複製</value>
@@ -1168,7 +1171,7 @@
     <value>[JA]View</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_EDIT_ACCOUNT_GROUP" xml:space="preserve">
-    <value></value>
+    <value />
   </data>
   <data name="TITLE_AMPWIZARD_DELETE_ACCOUNT_QUALIFICATION_CONFIRM" xml:space="preserve">
     <value>[JA]Delete Account Qualification</value>
@@ -1295,8 +1298,14 @@
   </data>
   <data name="TEXT_NOWCAST_RIGHT_CLICK_FOR_OPTIONS" xml:space="preserve">
     <value>[JA] right click for options</value>
-  </data>  
+  </data>
   <data name="TEXT_NO_DATA_FOR_GRAPH" xml:space="preserve">
     <value>No data available</value>
-  </data>     
+  </data>
+  <data name="CURRENT_LOCALE" xml:space="preserve">
+    <value>ja-JA</value>
+  </data>
+  <data name="FRACTION_DIGITS" xml:space="preserve">
+    <value>2</value>
+  </data>
 </root>
