--- a/RMP/UI/MetraNet/App_GlobalResources/JSConsts.resx
+++ b/RMP/UI/MetraNet/App_GlobalResources/JSConsts.resx
@@ -135,6 +135,9 @@
   <data name="DECIMAL_SEPARATOR" xml:space="preserve">
     <value>.</value>
   </data>
+  <data name="DIGIT_SEPARATOR" xml:space="preserve">
+    <value>,</value>
+  </data>
   <data name="DUPLICATE" xml:space="preserve">
     <value>Duplicate</value>
   </data>
@@ -1168,7 +1171,7 @@
     <value>View</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_EDIT_ACCOUNT_GROUP" xml:space="preserve">
-    <value></value>
+    <value />
   </data>
   <data name="TITLE_AMPWIZARD_DELETE_ACCOUNT_QUALIFICATION_CONFIRM" xml:space="preserve">
     <value>Delete Account Qualification</value>
@@ -1290,13 +1293,19 @@
   <data name="TEXT_AMPWIZARD_INVALID_UQG_NAME" xml:space="preserve">
     <value>The value in this field is invalid. Valid Usage Qualification names can only consist of alphanumeric characters (Aa-Zz, 0-9) and the underscore '_' character.</value>
   </data>
-   <data name="TEXT_NOWCAST_REFRESH" xml:space="preserve">
+  <data name="TEXT_NOWCAST_REFRESH" xml:space="preserve">
     <value>Refresh</value>
   </data>
   <data name="TEXT_NOWCAST_RIGHT_CLICK_FOR_OPTIONS" xml:space="preserve">
     <value>right click for options</value>
-  </data> 
+  </data>
   <data name="TEXT_NO_DATA_FOR_GRAPH" xml:space="preserve">
     <value>No data available</value>
-  </data>   
+  </data>
+  <data name="CURRENT_LOCALE" xml:space="preserve">
+    <value>en-US</value>
+  </data>
+  <data name="FRACTION_DIGITS" xml:space="preserve">
+    <value>2</value>
+  </data>
 </root>
