--- a/RMP/UI/MetraNet/App_GlobalResources/Resource.es-MX.resx
+++ b/RMP/UI/MetraNet/App_GlobalResources/Resource.es-MX.resx
@@ -153,6 +153,9 @@
   <data name="TEXT_ADD" xml:space="preserve">
     <value>[es-MX]Add Accounts</value>
   </data>
+  <data name="TEXT_ADD_BILL_MESSAGE" xml:space="preserve">
+    <value>[es-MX]Add Bill Message</value>
+  </data>
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>[es-MX]Add</value>
   </data>
