--- a/RMP/UI/MetraNet/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewGroupSubscriptionMemberUpdateDetails.aspx.resx
+++ b/RMP/UI/MetraNet/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewGroupSubscriptionMemberUpdateDetails.aspx.resx
@@ -129,8 +129,14 @@
   <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_GROUPSUBID" xml:space="preserve">
     <value>Group Subscription ID</value>
   </data>
+  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_GROUPSUB_NAME" xml:space="preserve">
+    <value>Group Subscription name</value>
+  </data>
   <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_MEMBERID" xml:space="preserve">
     <value>Member ID</value>
+  </data>
+  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_ACCOUNT_NAME" xml:space="preserve">
+    <value>Member Name</value>
   </data>
   <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_PROPERTYNAME" xml:space="preserve">
     <value>Property Name</value>
