--- a/RMP/UI/MetraNet/Quoting/App_LocalResources/CreateQuote.aspx.fr.resx
+++ b/RMP/UI/MetraNet/Quoting/App_LocalResources/CreateQuote.aspx.fr.resx
@@ -228,8 +228,8 @@
   <data name="MTbtnCancelResource1.Text" xml:space="preserve">
     <value>Annuler</value>
   </data>
-  <data name="MTTitleCreateQuoteResource.Text" xml:space="preserve">
-    <value>Gérer les bons de commande</value>
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>Créer un bon de commande</value>
   </data>
   <data name="REMOVE_ICB" xml:space="preserve">
     <value>Supprimer ICB</value>
@@ -320,5 +320,8 @@
   </data>
   <data name="DEFAULT_RULE" xml:space="preserve">
     <value>Règle par défaut</value>
+  </data>
+  <data name="TEXT_MANAGE_QUOTE" xml:space="preserve">
+    <value>Gérer les bons de commande</value>
   </data>
 </root>
