--- a/App_GlobalResources/Reports.es-MX.resx
+++ b/App_GlobalResources/Reports.es-MX.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="TEXT_ACCOUNTING_CYCLE" xml:space="preserve">
+    <value>[es-MX]Accounting cycle</value>
+  </data>
   <data name="TEXT_ADAPTER_NAME" xml:space="preserve">
     <value>[es-MX]Adapter Name</value>
   </data>
