--- a/Reporting/App_LocalResources/RevRecReport.aspx.resx
+++ b/Reporting/App_LocalResources/RevRecReport.aspx.resx
@@ -117,23 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ApplyFilterBtn_Caption" xml:space="preserve">
-    <value>Apply Filter</value>
-  </data>
-  <data name="Deferred_Caption" xml:space="preserve">
-    <value>Deferred</value>
-  </data>
-  <data name="Earned_Caption" xml:space="preserve">
-    <value>Earned</value>
-  </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Deferred Revenue Schedule Widget</value>
+    <value>Deferred Revenue Schedule</value>
   </data>
   <data name="Option_All_Text" xml:space="preserve">
     <value>All</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet - Deferred Revenue Schedule Widget</value>
+    <value>MetraNet - Deferred Revenue Schedule Report</value>
   </data>
   <data name="REPORT_TITLE" xml:space="preserve">
     <value>Deferred Revenue Schedule Widget</value>
